# food-facts-AI

./: README.md  pyproject.toml  research.ipynb
data/: nutribench_estimated.csv
evaluation/: nutridataset.py  nutrieval.py
src/: Dockerfile  app.py  conf.py  ingredients.py  nutrition.py  schemas.py
