[project]
name = "food-facts-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain[openai]>=0.3.27",
    "pandas>=2.3.2",
    "uvicorn[standard]>=0.35.0",
]
