[project]
name = "food-facts-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain[openai]>=0.3.27",
    "langsmith>=0.4.27",
    "openai>=1.107.1",
    "openevals>=0.1.0",
    "pandas>=2.3.2",
    "uvicorn[standard]>=0.35.0",
]
